<resources>
    <string name="app_name">Natural Opinion</string>
    <string name="version_1_0"><u><b>Version 1.0</b></u></string>
    <string name="natural_medical_protocols">Natural Medical Protocols</string>
    <string name="logout"><u>Logout</u></string>
    <string name="natural_medical_protocol">This is a database of researched medical information about natural therapeutics. It was written for physicians for use in clinical practice and is employed all over the world in a variety of health-care environments. The information was gathered and organized by a consortium of doctors from various branches of medicine. The data compiled here was taken from research journals (through 2008) and medical books. To see a complete bibliography of sources, click here.\nNatural Medical Protocols provides information on natural remedies to treat a specific condition or to simply answer an inquiring patient\'s questions. Everything in the database is referenced and the research citations are included. Each medical condition lists diet and nutrition, vitamins and minerals, supplements, botanicals, homeopathic remedies and miscellaneous therapies. We also provide specific data about drug-nutrient interactions.\nLast year in the U.S., about 75% of the population sought natural or alternative treatments for health problems. This website allows a physician to provide rational, researched treatment information to patients about most common health conditions - natural medicine for the future.</string>
    <string name="about_text">We are Natural Opinion, a medical computer information/software company in Connecticut. In our office in Southbury we have a staff of researchers continuously reviewing current literature and revising our natural therapeutic information in Natural Medical Protocols to match new research findings. There are also specialty review boards to periodically examine our protocols and data to make sure they conform to the latest medical evidence.</string>
    <string name="you_will_be_re_directed_to_the_website_for_this_task">You will be re-directed to the website for this task.</string>
    <string name="list_of_the_details_required_to_fill_the_form_for_the_ordering_request_and_payment">List of the details required to fill the form for the ordering request and payment</string>
    <string name="legal_name_n_full_address_n_contact_details_n_creadit_card_details">• Legal Name\n• Full Address\n• Contact Details\n• Creadit Card Details</string>
    <string name="diet_desc">• Eat foods high in <b>fiber</b> (significantly lowers cholesterol)\n• Reduce fat consumption, especially saturated fats (animal products) and oxidized fats like those found in fast food places (french fries and other fried foods)\n• Eat lots of <b>garlic</b> and onions\n• Eat complex carbohydrates, e.g., vegetables, beans, and brown rice and avoid sucrose and all simple sugars (more important than fat reduction)\n• Consume more soy protein and less meat\n• Eat a diet high in cold water fish\n• Avoid hydrogenated oils and trans-fatty acids\n• Reduce, but don\'t eliminate alcohol from the diet, e.g., 1 glass of wine per evening\n• Drink more tea and cocoa\n• Avoid milk and other dairy products</string>
    <string name="Lorem">• Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n• Fusce ac arcu lobortis, tincidunt dui vel, bibendum orci.\n• Nullam suscipit orci ut pharetra sodales.\n• Donec eget enim tincidunt, varius diam et, laoreet nulla.\n• Vivamus eget orci ac tellus rutrum porttitor id sit amet dui.\n• Nulla et quam vestibulum, bibendum lacus ut, lobortis enim.\n• Vivamus vitae urna porta, lacinia est ut, placerat lacus.\n• Aenean sodales mi ac fringilla tempor.\n• Sed efficitur lorem in orci scelerisque hendrerit.\n• Morbi eget purus accumsan quam malesuada ultricies.\n• Sed efficitur lorem in orci scelerisque hendrerit.\n• Morbi eget purus accumsan quam malesuada ultricies.</string>
    <string name="Lorem4">• Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n• Fusce ac arcu lobortis, tincidunt dui vel, bibendum orci.\n• Nullam suscipit orci ut pharetra sodales.\n• Donec eget enim tincidunt, varius diam et, laoreet nulla.</string>
    <string name="database_text">The information shown in Natural Medical Protocols and several Internet websites about natural health comes from the same database. We include or exclude data based on the target audience. The output of the production process is a set of HTML pages that are ready to be shown on the web or CDROM. This means that our collection of pages can easily be tailored to your website requirements.\nWe have a permanent staff of software engineers providing production support for the CDROM products delivered by Natural Opinion. This same team uses sophisticated technologies to quickly produce one-of-a-kind website HTML page collections for our leasing clients. \nIt is our business to make this data available to as many people in as many different forms on the internet and other media as possible. We believe in this information and our company is in it for the long run to promote the exposure of scientifically researched natural medicine.</string>

    <!--    diet-->
    <string name="atherosclerosis_diet">• Eat foods high in <a href='https://www.android-examples.com//'>fiber</a>  (significantly lowers cholesterol)\n• Reduce fat consumption, especially saturated fats (animal products) and oxidized fats like those found in fast food places (french fries and other fried foods)\n• Eat lots of garlic and onions\nEat complex carbohydrates, e.g., vegetables, beans, and brown rice and avoid sucrose and all simple sugars (more important than fat reduction)\n• Consume more soy protein and less meat\n• Eat a diet high in cold water fish\n• Avoid hydrogenated oils and trans-fatty acids\n• Reduce, but don\'t eliminate alcohol from the diet, e.g., 1 glass of wine per evening\n• Drink more tea and cocoa\n• Avoid milk and other dairy products"</string>
    <string name="atherosclerosis_vitamin">• Beta-Carotene: 100,000 I.U.\n• Vitamin B3 (Niacin): 30 - 1500 mg. TID in divided doses (increase slowly from 200 mg.) Do not use the time released form of niacin for atherosclerosis\n• Vitamin B5: 600 - 1200 mg.\n• Vitamin B6: 50 mg.\n• Folate: 5 - 10 mg.\n• Vitamin C: 500 mg. TID\n• Vitamin E: 800 - 1600 I.U.\n• Lecithin: 2 Tbl. or 12 - 20 capsules\n• Selenium: 200 - 300 mcg.\n• Manganese: 5 - 20 mg.\n• Zinc: 30 mg. TID\n• Copper: 2 - 4 mg.\n• Magnesium (Aspartate form): 500 - 800 mg.\n• Molybdenum, Vanadium, Silicon, and other trace minerals\n• Chromium Aspartate: 200 - 500 mcg. (can use brewers yeast)</string>
    <string name="atherosclerosis_supplement">• Coenzyme Q10: 40 - 120 mg. in divided doses\n• Bromelain: 500 mg. BID (on an empty stomach)\n• L-Carnitine: 3 gm.\n• L-Arginine: 2 - 4 gm.\n• BID Omega-3 Fatty Acids: 2 - 5 gm. TID\n• Omega-6 Fatty Acids: 1 gm. TID\n• Glucosamine Sulfate: 100 mg.\n• Fiber: 20 - 45 gm. in divided doses accompanied with 12 ounces of water per dose\n• Garlic: 400 mg.\n• Red Yeast Rice (Monascus purpureus): 1200 mg. with 50 mg. Coenzyme Q10 2 times a day</string>
    <string name="atherosclerosis_botanical">• Formula - Medicago (1), Salvia miltiorrhiza (1), Zingiber (1), Crataegus (2), Allium sativum (1), Curcuma (1), Ginkgo (1): take 1/4 tsp. TID\n• Individual botanicals to be considered for this condtion:\nAllium sativum (Garlic)\nCamellia sinensis (Green tea)\nCapsicum frutescens (Cayenne, Red pepper)\nCommiphora mukul (Guggulu)\nCrataegus oxycantha (Hawthorne)\nCurcuma longa (Tumeric)\nGinkgo biloba (Ginkgo)\nMedicago sativa (Alfalfa)\nPolygonum multiflorum (Fo-ti, He-shou-wu)\nPausinystalia yohimbe (Yohimbe)\nZingiber officinale (Ginger)</string>
    <string name="test">Click on this link to visit my Website <br /><a href='https://www.google.com/'>Android-Examples</a></string>
    <string name="abbreviation_text">QD = Once daily\n BID = Twice daily\n TID = Three times a day\n QID = Four timers a day</string>
</resources>