<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrderActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/order_heading"
        app:layout_constraintBottom_toBottomOf="@id/order_heading"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back"
        android:id="@+id/back_button3"/>

    <TextView
        android:id="@+id/order_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="Order Form"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />


            <androidx.cardview.widget.CardView
                android:id="@+id/alert_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_heading">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_alert"
                        app:layout_constraintBottom_toBottomOf="@id/alert_message"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="@id/alert_message" />

                    <TextView
                        android:id="@+id/alert_message"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="80dp"
                        android:gravity="center_vertical"
                        android:paddingRight="5dp"
                        android:text="@string/you_will_be_re_directed_to_the_website_for_this_task"
                        android:textColor="@color/black"
                        app:layout_constraintLeft_toRightOf="@id/alert"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@color/light_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/alert_message"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/note_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/alert_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green">

                    <TextView
                        android:id="@+id/note_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingVertical="10dp"
                        android:text="Note !"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/note_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:paddingBottom="20dp"
                        android:text="@string/list_of_the_details_required_to_fill_the_form_for_the_ordering_request_and_payment"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/note_heading" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:lineHeight="40dp"
                        android:paddingBottom="20dp"
                        android:text="@string/legal_name_n_full_address_n_contact_details_n_creadit_card_details"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        app:layout_constraintTop_toBottomOf="@id/note_detail" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_card"
                android:id="@+id/open_form">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Open Form"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:background="@color/deep_green"/>
            </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>