<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/about_heading"
        app:layout_constraintBottom_toBottomOf="@id/about_heading"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_back"
        android:id="@+id/back_button"/>

    <TextView
        android:id="@+id/about_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="What we are about"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/about_heading"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/protocol_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/deep_green"
                        android:alpha="0.9"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="About Natural Medical Protocols"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/text1"/>

                    <TextView
                        android:id="@+id/protocol_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/natural_medical_protocol"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="Read more"
                        android:textColor="@color/deep_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/protocol_detail" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/protocol_card"
                android:layout_marginBottom="80dp"
                android:paddingBottom="100dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/deep_green"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="About Us"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/text2"/>

                    <TextView
                        android:id="@+id/about_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/about_text"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:text="Read more"
                        android:textColor="@color/deep_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_detail" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/abbreviation_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/about_card"
                android:layout_marginBottom="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="100dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/deep_green"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:text="Abbreviations"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/text3"/>

                    <TextView
                        android:id="@+id/abbreviation_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/abbreviation_text"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:textColor="@color/deep_green"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/abbreviation_detail" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>